# unbound-blocker

./: README.md  flake.nix  pyproject.toml
checks/: black.nix  mypy.nix  ruff.nix
src/unbound_blocker/: README.md  pyproject.toml
src/unbound_blocker/src/unbound_blocker/: fetch_blocklist.py
unbound_blocker/: fetch_blocklist.py
